[gd_scene load_steps=7 format=3 uid="uid://d1v8f6pfwoeyv"]

[ext_resource type="Script" path="res://old_junk/singleplayer_prototype/scripts/boiler_room.gd" id="1_niycm"]
[ext_resource type="PackedScene" uid="uid://dc3cbutqlvadm" path="res://old_junk/singleplayer_prototype/scenes/soot.tscn" id="2_6845h"]
[ext_resource type="Texture2D" uid="uid://cqhfunqutv6i" path="res://old_junk/singleplayer_prototype/sprites/BoilerRoomAtlas.png" id="2_eagmd"]
[ext_resource type="Texture2D" uid="uid://q41cy8h6p8e5" path="res://old_junk/singleplayer_prototype/sprites/e_key.png" id="3_3bm0a"]
[ext_resource type="PackedScene" uid="uid://kxywyvfdo3y8" path="res://old_junk/singleplayer_prototype/scenes/wall_hole.tscn" id="3_4ryvi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcm4a"]
size = Vector2(46.148, 88.5221)

[node name="BoilerRoom" type="Node2D"]
script = ExtResource("1_niycm")

[node name="FurnaceBg" type="StaticBody2D" parent="."]
position = Vector2(-732, 172)

[node name="Sprite2D" type="Sprite2D" parent="FurnaceBg"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(13, 13, 904, 974)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FurnaceBg"]
visible = false
polygon = PackedVector2Array(3, 476, 72, 375, 206, 223, -23, 222, -50, 220, -69, 214, -79, 207, -83, 198, -77, 189, -65, 181, -47, 175, -23, 170, 24, 167, 256, 167, 256, 128, -121, 127, -127, 476)

[node name="Furnace" type="Node2D" parent="."]
position = Vector2(-896, 174)

[node name="Sprite2D" type="Sprite2D" parent="Furnace"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(926, 16, 575, 980)
metadata/_edit_lock_ = true

[node name="Trampoline" type="Node2D" parent="."]
position = Vector2(-579, 352)

[node name="Sprite2D2" type="Sprite2D" parent="Trampoline"]
position = Vector2(-42, 36)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(16, 1004, 383, 100)
metadata/_edit_lock_ = true

[node name="DroppingArea" type="Area2D" parent="Trampoline"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trampoline/DroppingArea"]
visible = false
position = Vector2(-201.046, 4.52179)
rotation = 0.719076
shape = SubResource("RectangleShape2D_dcm4a")

[node name="ActionKeySprite" type="Sprite2D" parent="Trampoline"]
visible = false
position = Vector2(-247, -85)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_3bm0a")

[node name="BackWall" type="Node2D" parent="."]
position = Vector2(234, -92)

[node name="Sprite2D" type="Sprite2D" parent="BackWall"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(445, 1031, 1046, 441)
metadata/_edit_lock_ = true

[node name="RightHoles" type="StaticBody2D" parent="."]
position = Vector2(977, 362)

[node name="Sprite2D" type="Sprite2D" parent="RightHoles"]
visible = false
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(35, 1115, 357, 375)

[node name="PartialWall" type="Node2D" parent="RightHoles"]

[node name="Sprite2D1" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(-157, -137)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(38, 1115, 36, 94)

[node name="Sprite2D2" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(-126, -108)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(74, 1143, 26, 96)

[node name="Sprite2D3" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(-98.805, -78.565)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(99, 1168, 29, 105)

[node name="Sprite2D4" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(-72, -48)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(126, 1197, 30, 108)

[node name="Sprite2D5" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(-41, -16)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(154, 1227, 33, 113)

[node name="Sprite2D6" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(-7, 24)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(184, 1260, 37, 121)

[node name="Sprite2D7" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(30, 66)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(218, 1296, 38, 126)

[node name="Sprite2D8" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(68, 107)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(254, 1336, 39, 130)

[node name="Sprite2D9" type="Sprite2D" parent="RightHoles/PartialWall"]
position = Vector2(136, 140)
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(292, 1376, 99, 115)

[node name="Holes" type="Node2D" parent="RightHoles"]
position = Vector2(3, -216.345)

[node name="WallHole1" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(-144, 105.345)

[node name="WallHole2" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(-116, 139)

[node name="WallHole3" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(-87, 173)

[node name="WallHole4" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(-56, 209)

[node name="WallHole5" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(-26, 244)

[node name="WallHole6" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(7, 283)

[node name="WallHole7" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(42, 324)

[node name="WallHole8" parent="RightHoles/Holes" instance=ExtResource("3_4ryvi")]
position = Vector2(78, 367)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightHoles"]
visible = false
polygon = PackedVector2Array(133, 220, 210, 219, -167, -181, -167, -129)

[node name="RightWall" type="Node2D" parent="."]
position = Vector2(972.32, 141.65)

[node name="Sprite2D" type="Sprite2D" parent="RightWall"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(1509, 18, 504, 977)
metadata/_edit_lock_ = true

[node name="Ground" type="Node2D" parent="."]
position = Vector2(208, 390)

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(21, 1510, 1737, 319)
metadata/_edit_lock_ = true

[node name="BackFloor" type="StaticBody2D" parent="."]
position = Vector2(432, 157)

[node name="Sprite2D" type="Sprite2D" parent="BackFloor"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(2024, 12, 758, 154)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BackFloor"]
visible = false
polygon = PackedVector2Array(377, 74, 377, 23, -376, 23, -376, 74)

[node name="AdminPost" type="StaticBody2D" parent="."]
position = Vector2(-193, 164)

[node name="Sprite2D" type="Sprite2D" parent="AdminPost"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(1510, 1066, 564, 352)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AdminPost"]
visible = false
polygon = PackedVector2Array(202, 111, 250, 69, 250, 10, -281, 9, -281, 174, -238, 175, -184, 112)

[node name="Soot" parent="." instance=ExtResource("2_6845h")]
position = Vector2(858, 339)
wall_min_slide_angle = 0.0

[node name="Camera2D2" type="Camera2D" parent="Soot"]
zoom = Vector2(1.5, 1.5)
limit_left = -1170
limit_top = -40
limit_right = 1220
limit_bottom = 630
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="CanvasLayer" type="CanvasLayer" parent="Soot"]

[node name="HBoxContainer" type="HBoxContainer" parent="Soot/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CoalLabel" type="Label" parent="Soot/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Coal burned: 0 pcs"

[node name="Soot2" parent="." instance=ExtResource("2_6845h")]
position = Vector2(870, 378)
wall_min_slide_angle = 0.0
controlable = false

[node name="Soot3" parent="." instance=ExtResource("2_6845h")]
position = Vector2(802, 382)
scale = Vector2(0.25, 0.25)
controlable = false

[node name="FrontFloor" type="StaticBody2D" parent="."]
position = Vector2(249, 597)

[node name="Sprite2D" type="Sprite2D" parent="FrontFloor"]
texture = ExtResource("2_eagmd")
region_enabled = true
region_rect = Rect2(12, 1842, 1960, 105)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FrontFloor"]
visible = false
polygon = PackedVector2Array(-934, -12, -978, 48, 977, 49, 977, 24, 939, -16)

[connection signal="body_entered" from="Trampoline/DroppingArea" to="." method="_on_dropping_area_body_entered"]
[connection signal="body_exited" from="Trampoline/DroppingArea" to="." method="_on_dropping_area_body_exited"]
